--- a/IrrigationController/IrrigationController/App.config
+++ b/IrrigationController/IrrigationController/App.config
@@ -1,6 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+    <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <connectionStrings>
+    <add name="IrrigationController" connectionString="server=localhost;userid=root;password=raspberry;database=IrrigationController"/>
+  </connectionStrings>
+  <appSettings>
+    <add key="heartbeat" value="10"/>
+    <add key="TimeoutDelaySeconds" value="900"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="Controller" />
+    </root>
+    <appender name="Controller" type="log4net.Appender.RollingFileAppender">
+      <file value="Controller.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Size"/>
+      <maxSizeRollBackups value="10"/>
+      <maximumFileSize value="1MB"/>
+      <staticLogFileName value="true"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level - %message%newline"/>
+      </layout>
+    </appender>
+  </log4net>
 </configuration>
