--- a/IrrigationController/IrrigationController/IrrigationController.csproj
+++ b/IrrigationController/IrrigationController/IrrigationController.csproj
@@ -74,10 +74,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="InstallDependencies\InstallDependencies.sh" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="sql\IrrigationController.sql" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
