--- a/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
+++ b/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DataAccess.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventHistory.cs" />
+    <Compile Include="PendingCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ControllerStatus.cs" />
