--- a/IrrigationController/ApacheWebApp/ApacheWebApp.csproj
+++ b/IrrigationController/ApacheWebApp/ApacheWebApp.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="api.php" />
     <None Include="scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="scripts\ic.js" />
     <Content Include="scripts\jquery-3.1.1.js" />
