--- a/IrrigationController/IrrigationController/App.config
+++ b/IrrigationController/IrrigationController/App.config
@@ -1,14 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="IrrigationController" connectionString="server=localhost;userid=root;password=raspberry;database=IrrigationController"/>
+    <add name="IrrigationController" connectionString="server=localhost;userid=root;password=raspberry;database=IrrigationController" />
   </connectionStrings>
   <appSettings>
-    <add key="heartbeat" value="1"/>
-    <add key="TimeoutDelaySeconds" value="900"/>
+    <add key="heartbeat" value="3" />
+    <add key="TimeoutDelaySeconds" value="900" />
+    <add key="CommandQueryInterval" value="15"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -20,15 +21,27 @@
       <appender-ref ref="Controller" />
     </root>
     <appender name="Controller" type="log4net.Appender.RollingFileAppender">
-      <file value="Controller.log"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="1MB"/>
-      <staticLogFileName value="true"/>
+      <file value="Controller.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %-5level - %message%newline"/>
+        <conversionPattern value="%date %-5level - %message%newline" />
       </layout>
     </appender>
   </log4net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
