--- a/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
+++ b/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
@@ -34,6 +34,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Documents\Visual Studio 2015\Projects\Lib\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Raspberry.IO">
+      <HintPath>..\..\..\..\..\Documents\Visual Studio 2015\Projects\raspberry-sharp-io-master\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.dll</HintPath>
+    </Reference>
+    <Reference Include="Raspberry.IO.GeneralPurpose">
+      <HintPath>..\..\..\..\..\Documents\Visual Studio 2015\Projects\raspberry-sharp-io-master\Raspberry.IO.GeneralPurpose\bin\Debug\Raspberry.IO.GeneralPurpose.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
@@ -52,10 +58,12 @@
     <Compile Include="DataAccess.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventHistory.cs" />
+    <Compile Include="ManualProgram.cs" />
     <Compile Include="PendingCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schedule.cs" />
     <Compile Include="ControllerStatus.cs" />
+    <Compile Include="Station.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
