--- a/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
+++ b/IrrigationController/IrrigationControllerData/IrrigationControllerData.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Schedule.cs" />
     <Compile Include="ControllerStatus.cs" />
     <Compile Include="Station.cs" />
+    <Compile Include="Status.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
