Added pressure transducer characteristic to resolve in kPa

--- a/IrrigationController/IrrigationController/App.config
+++ b/IrrigationController/IrrigationController/App.config
@@ -10,6 +10,7 @@
     <add key="heartbeat" value="3" />
     <add key="TimeoutDelaySeconds" value="900" />
     <add key="CommandQueryInterval" value="15"/>
+    <add key="ApiUrl" value="http://www.creepytree.co.nz/ICTest/api/api.php/"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -17,7 +18,7 @@
 
   <log4net>
     <root>
-      <level value="ALL" />
+      <level value="Info" />
       <appender-ref ref="Controller" />
     </root>
     <appender name="Controller" type="log4net.Appender.RollingFileAppender">
